--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
+#datasource
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.name=content
+logging.level.org.springframework.jdbc=DEBUG
+#properties
 cc.about=This is my second push to the project
 cc.welcome-message=I very happy about my new habit
+
+#actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+#profiles
+#spring.profiles.active=production
