docker and deploying thing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,13 @@
-#datasource
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=content
-logging.level.org.springframework.jdbc=DEBUG
+spring.datasource.url=jdbc:postgresql://localhost:5432/db-1
+#spring.datasource.username=postgres
+spring.datasource.password=password
+spring.sql.init.mode=always
+
 #properties
 cc.about=This is my second push to the project
 cc.welcome-message=I very happy about my new habit
-
 #actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
-
 #profiles
 #spring.profiles.active=production
