--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,11 +2,9 @@ version: '3.8'
 
 services:
   db:
-    container_name: db
     image: postgres:alpine
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USERNAME: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: db
+      POSTGRES_USER: postgres
