--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<version>42.2.0</version>
 		</dependency>
 
 		<dependency>
