--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:postgresql://db:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.password=password
 spring.datasource.username=postgres
 spring.sql.init.mode=always
 
 #properties
-cc.about=This is my second push to the project
-cc.welcome-message=I very happy about my new habit
+cc.about=  ?
+cc.welcome-message= ?
 
 #actuator
 management.endpoints.web.exposure.include=*
