--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://172.18.0.2:5432/postgres
 spring.datasource.password=password
 spring.datasource.username=postgres
 spring.sql.init.mode=always
