Updating for railway!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
-spring.datasource.password=${PROD_DB_PASSWORD}
-spring.datasource.username=${PROD_DB_USERNAME}
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres``
+spring.datasource.password=password
+spring.datasource.username=postgres
 spring.sql.init.mode=always
 
 #properties
