--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,2 +1,6 @@
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+
 cc.about=This is Production
 cc.welcome-message=production
