Updating for railway!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://postgres:ok5PK8ZHhAcziMcfpN7w@containers-us-west-188.railway.app:7634/railway
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres``
+spring.datasource.password=password
+spring.datasource.username=postgres
 spring.sql.init.mode=always
 
 #properties
@@ -12,4 +12,4 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 #profiles
-spring.profiles.active=production
+#spring.profiles.active=production
