--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://postgres:ok5PK8ZHhAcziMcfpN7w@containers-us-west-188.railway.app:7634/railway
+spring.spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 
