Updating for railway!

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,6 +1,6 @@
 spring.spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
-
+spring.sql.init.mode=always
 cc.about=This is Production
 cc.welcome-message=production
